---
source: crates/normalize/tests/cli_snapshots.rs
expression: "snapshot_help(&[\"analyze\"])"
---
Assess codebase quality. Use for health checks, finding duplicates, security scanning, and architecture analysis.

Usage: normalize analyze [OPTIONS]

Options:
      --pretty                     Human-friendly output with colors and formatting
      --compact                    Compact output without colors (overrides TTY detection)
      --jsonl                      Output one JSON object per line (for arrays)
      --json                       Output machine-readable JSON
      --jq <jq>                    Filter output through jq expression
      --input-schema               Print JSON Schema of the subcommand's input parameters and exit
      --output-schema              Print JSON Schema of the subcommand's return type and exit
      --manual                     Emit the reference manual for the command subtree rooted here and exit
      --params-json <params-json>  Provide all parameters as a JSON object instead of individual flags
  -h, --help                       Print help
  -V, --version                    Print version

Repository:
  docs           Measure documentation coverage: which public symbols lack doc comments.

Security:
  security       Scan the codebase for security issues (hardcoded secrets, unsafe patterns).

Diff:
  skeleton-diff  Show structural (skeleton) changes between a base ref and HEAD.
